WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
275406
[WebGPU] error in WGSL::prepare with attached WGSL source
https://bugs.webkit.org/show_bug.cgi?id=275406
Summary
[WebGPU] error in WGSL::prepare with attached WGSL source
Mike Wyrzykowski
Reported
2024-06-12 10:19:59 PDT
Created
attachment 471663
[details]
source [WebGPU] error in WGSL::prepare with attached WGSL source
Attachments
source
(10.65 KB, text/plain)
2024-06-12 10:19 PDT
,
Mike Wyrzykowski
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-06-12 10:20:13 PDT
<
rdar://problem/129691678
>
Tadeu Zagallo
Comment 2
2024-06-12 10:57:39 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29752
EWS
Comment 3
2024-06-13 14:13:18 PDT
Committed
279987@main
(89a9ae9c43f4): <
https://commits.webkit.org/279987@main
> Reviewed commits have been landed. Closing PR #29752 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug